# contact-book-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
api/: celerybeat-schedule  load.py  main.py  sync.py  tasks.py
api/data/: contacts.csv
api/routers/: base.py
api/routers/v1/: routers.py
api/routers/v2/: routers.py
api/tests/: conftest.py  test_api.py  test_nimbus_client.py
api/utils/: crud.py  database.py  models.py  nimbus.py  schema.py  search.py
docs/: index.md  solution.md
