[tool.poetry]
name = "contact-book-api"
version = "0.1.0"
description = ""
authors = ["Denis Volokh <denis.volokh@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
fastapi = "^0.101.0"
pydantic = "^2.1.1"
databases = "^0.7.0"
asyncpg = "^0.28.0"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"
huey = "^2.4.5"
redis = "^4.6.0"
celery = "^5.3.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
